@@ -2,15 +2,6 @@
 
 TMP  := $(CURDIR)/debian/libapache2-mod-perl2
 
-# Allow disabling build optimation by setting noopt in
-# $DEB_BUILD_OPTIONS
-#CFLAGS = -Wall -g
-#ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-#        CFLAGS += -O0
-#else
-#        CFLAGS += -O2
-#endif
-
 %:
 	dh $@
 
