@@ -1,15 +1,17 @@
 libapache2-mod-perl2 (2.0.4-8) UNRELEASED; urgency=low
 
   TODO:
-  - remove cruft
+  - DEB_BUILD_OPTIONS does not seem to work
   - Clean lintian
   - Upgrade version
+  - Review patches
   - Check copright
 
   * Added myself to Uploaders
   * Upped debian compatibility level to 7 and removed quilt cruft
   * Refreshed debian/rules
   * Upped standards version to 3.9.1
+  * Added versioning of depdendency between dev and core packages
 
  -- Nicholas Bamber <nicholas@periapt.co.uk>  Tue, 15 Mar 2011 11:00:11 +0000
 
